--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ a{
 	width:100%;
 }
 
+
 nav{
 	position:fixed;
 	z-index:4;
@@ -24,6 +25,12 @@ nav{
 	left:0;
 	display:table;
 	height:100%;
+}
+
+footer{
+	background:white;
+	width:100%;
+	height:100px;
 }
 
 #navContainer{
@@ -34,4 +41,30 @@ nav{
 	display:table-cell;
 	vertical-align:middle;
 	list-style:none;
+}
+
+#pageContainer{
+	height:100%;
+	width:100%;
+}
+
+.one{
+	background:url(../img/illestevaBG.jpg);
+	height:1200px;
+}
+#customerInfoContainer{
+	position:fixed;
+	top:5%;
+	right:2%;
+	z-index:1;
+	width:25%
+
+}
+
+#customerInfoContainer h3{
+	display:inline;
+	color:white;
+	padding-left:1%;
+	padding-right:1%;
+	font-size:1rem;
 }
