--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,118 @@
+/*Fonts*/
+/*HEADER FONT - Proxima Nova*/
+@font-face {
+    font-family: proximaNovaBlack; src: url('../fonts/ProximaNova-Bold.otf');
+}
+
+@font-face {
+    font-family: proximaNovaExtraBold; src: url('../fonts/ProximaNova-Extrabold.otf');
+}
+
+@font-face {
+    font-family: proximaNovaLight; src: url('../fonts/ProximaNova-Light.otf');
+}
+
+@font-face {
+    font-family: proximaNovaRegular;  src: url('../fonts/ProximaNova-Regular.otf');
+}
+
+@font-face {
+    font-family: proximaNovaSemiBold; src: url('../fonts/ProximaNova-Semibold.otf');
+}
+
+@font-face {
+    font-family: proximaNovaCond-Regular; src: url('../fonts/ProximaNovaCond-Regular.otf');
+}
+
+@font-face {
+    font-family: proximaNovaCond-SemiBold; src: url('../fonts/ProximaNova-Semibold.otf');
+}
+/*Font Style ends*/
+
 body{
 	overflow-x:hidden;
 	margin:0;
+	font-family:"proximaNovaRegular";
+	font-size:1em;
 }
 
 a{
 	text-decoration:none;
 	color:white;
 }
-#background{
-	width:100%;
-	height:100%;
-}
-
-#background img{
-	height:100%;
-	width:100%;
-}
-
-
-nav{
-	position:fixed;
-	z-index:4;
+.leftBorder{
 	top:0;
 	left:0;
-	display:table;
+	width:1.5%;
+	height:100%;
+	position:fixed;
+	z-index:2;
+	background:white;
+}
+
+.rightBorder{
+	top:0;
+	right:0;
+	width:1.5%;
+	height:100%;
+	position:fixed;
+	z-index:2;
+	background:white;
+}
+
+.bottomBorder{
+	bottom:0;
+	left:0;
+	width:100%;
+	height:3%;
+	position:fixed;
+	z-index:1;
+	background:white;
+}
+
+#logo{
+	max-width: 15%;
+	width: 100%;
+	display: inline-block;
+	margin-top: 3%;
+	margin-bottom: 3%;
+	margin-left:3%;
+}
+#logo img{
+	width:100%;
 	height:100%;
 }
 
-footer{
-	background:white;
+.customerInfoContainer{
+	float:right;
+	list-style:none;
+	display:inline-block;
+	width:auto;
+	min-width:20%;
+	padding:0;
+	margin-top:5%;
+}
+.customerInfoContainer li{
+	display:inline-block;
+	padding-right:5%;
+	padding-left:5%;
+	font-family:"proximaNovaSemiBold";
+	font-size:0.9rem;
+}
+
+
+#customerInfoNav{
+	position:fixed;
+	top:0;
+	left:0;
+	z-index:1;
+	height:auto;
 	width:100%;
-	height:100px;
+	background:white;
+	-webkit-box-shadow:0 2px 10px rgba(0,0,0,0.3);
+	-o-box-shadow:0 2px 10px rgba(0,0,0,0.3);
+	-moz-box-shadow:0 2px 10px rgba(0,0,0,0.3);
+	box-shadow:0 2px 10px rgba(0,0,0,0.3);
 }
 
 #navContainer{
@@ -43,28 +125,41 @@ footer{
 	list-style:none;
 }
 
+
+#background{
+	width:100%;
+	height:100%;
+}
+
+#background img{
+	height:100%;
+	width:100%;
+}
+
+
+#productNav{
+	position:fixed;
+	z-index:4;
+	top:0;
+	left:1%;
+	display:table;
+	height:100%;
+}
+
+footer{
+	background:white;
+	width:100%;
+	height:100px;
+}
+
+
+
 #pageContainer{
 	height:100%;
 	width:100%;
 }
 
 .one{
-	background:url(../img/illestevaBG.jpg);
+	background:url(../img/illestevaBackground.jpg);
 	height:1200px;
-}
-#customerInfoContainer{
-	position:fixed;
-	top:5%;
-	right:2%;
-	z-index:1;
-	width:25%
-
-}
-
-#customerInfoContainer h3{
-	display:inline;
-	color:white;
-	padding-left:1%;
-	padding-right:1%;
-	font-size:1rem;
 }
