--- a/css/style.css
+++ b/css/style.css
@@ -166,13 +166,6 @@ a{
 
 }
 
-footer{
-	background:white;
-	width:100%;
-	height:100px;
-}
-
-
 
 #pageContainer{
 	max-height:80%;
@@ -182,4 +175,80 @@ footer{
 .one{
 	background:url(../img/illestevaBackground.jpg);
 	height:1200px;
+}
+
+/*footer Styles*/
+
+.footer {
+	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+	/**font-family:adobe-garamond-pro,Garamond,Times,serif;**/
+	line-height: 1.5;
+	position: absolute;
+	font-size: 0.70em;
+	z-index: 9;
+	width: 100%;
+	background: #ffffff;
+	padding: 14px 24px 13px;
+	display: inline-block;
+	color:#000000;
+	
+}
+.footer nav ul {
+	list-style: none;
+	list-style-image: none;
+}
+
+.nav>ul li a {
+	color: #000;
+	position: relative;
+	text-align: left;
+	text-decoration:none;
+	display: inline-block;
+	white-space: nowrap;
+}
+
+.footer> ul li {
+	padding: 0;
+	display:block;
+	padding:0;
+}
+
+.footer li {
+	margin: 0 .35em;
+}
+
+.footer:after {
+	clear: both;
+}
+
+#footer-menu{
+	float:right;
+	margin:0;
+	display:inline-block;
+}
+
+#footer-menu>li {
+	display: inline-block;
+	padding-right:50px;
+}
+
+
+
+
+@media(max-width:30em) {
+	
+	.footer{
+		float:left;
+		padding:13px;
+	}
+	#footer-menu{
+		padding-right:50px;
+		display:block;
+	}
+	#footer-menu>li {
+		display: inline-block;
+		padding:0;
+		float:left;
+	}
+	
 }
