--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,8 @@ a{
 	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
 	/**font-family:adobe-garamond-pro,Garamond,Times,serif;**/
 	line-height: 1.5;
-	position: absolute;
+	position: relative;
+	bottom:0;
 	font-size: 0.70em;
 	z-index: 9;
 	width: 100%;
