--- a/css/mensProductList.css
+++ b/css/mensProductList.css
@@ -168,26 +168,41 @@ article {
 
 
 #productModal{
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  z-index: 5;
-	  width: 80%;
-	  height: 100%;
-	  left: 50%;
-	  margin-left: -40%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 5;
+	max-width: 85%;
+	max-height: 100%;
+	height: 100%;
+	width: 100%;
+	left: 50%;
+	margin-left: -42.5%;
+	margin-top: 7%;
+}
+
+#modalBG{
+	position: fixed;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.2);
+	z-index: 5;
+	top: 0;
+	left: 0;
+	width: 100;
+	height: 100%;
+	width: 100%;
+
 }
 #rightContent{
-position: absolute;
-  display: inline;
-  
-  padding: 0;
-  margin: 0;
-
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+	position: absolute;
+	height:100%;
+	width:100%;
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
 }
 
 #rightContent img{
@@ -198,33 +213,22 @@ position: absolute;
 	
 }
 
-
 #leftContent{
-	-webkit-transform: rotate(10deg) scaleY(1.5) translate3d(-10%,0,0);
-	display:inline-block;
-	position: fixed;
-	/**background:aquamarine;**/
-	background:white;
-}
-
-#leftContent {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	width:50%;
-	height:100%;
-	float:left;	
-	
+	width: 50%;
+	height: 100%;
+	background: white;
+	-webkit-clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+	clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+	position:relative;
 }
 
 .onTop{
-	width:35%;
+	width:80%;
 	position:absolute;
-	padding-left: 3.5em;
+	height:100%;
+
 	font-size:1em;
 
-	display:table;
 }
 
 .onTop img{
@@ -232,39 +236,5 @@ position: absolute;
 	height:auto;
 	padding:0;
 	margin: 0;
-	
-	display:table-cell;
-	vertical-align:center;
 }
 
-
-h1.title, h3.subtitle{
-	font-family:"proximaNova";
-	text-transform:uppercase;
-	vertical-align:center;
-}
-
-h1.title{
-	padding:0;
-	margin:0;
-	font-size:1.5rem;
-}
-
-.subSection{
-	padding-top:2em;
-}	
-
-h3{
-	margin:0;
-	padding-top:0.5em;
-}
-h3.subtitle{
-	margin:0;
-	font-size:0.75rem;
-	display:inline;
-}
-
-p{
-	margin:0;
-	display:inline;
-}
