--- a/css/mensProductList.css
+++ b/css/mensProductList.css
@@ -50,6 +50,29 @@ h4{
 	height:100%;
 }
 
+
+
+#shoppingBag.show{
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	height: 77%;
+	z-index: 1;
+	width: 35%;
+	background: white;
+}
+
+.itemContainer{
+	width: 100%;
+	height: 35%
+}
+
+.itemContainer img{
+	width: 35%;
+	display: inline-block;
+	height:100%;
+}
+
 .glassStyles{
 	width: 80%;
 	margin-top: 11%;
