--- a/css/style.css
+++ b/css/style.css
@@ -145,12 +145,12 @@ a{
 
 /*animated nav ends*/
 
-#background{
+.background{
 	width:100%;
 	height:100%;
 }
 
-#background img{
+.background img{
 	height:100%;
 	width:100%;
 }
@@ -429,7 +429,50 @@ hr{
 	margin-top: 1em;
 	font-size: 0.75em;
 }
+
+
+/**Animation keyframes**/
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+/**TESTING TO SEE IF POSSIBLE page animation**/
+.m-scene {
+  .scene_element {
+    animation-duration: 0.25s;
+    transition-timing-function: ease-in;
+    animation-fill-mode: both;
+
+  }
+
+  .scene_element--fadein {
+    animation-name: fadeIn;
+  }
+
+  .scene_element--fadeinup {
+    animation-name: fadeInUp;
+  }
+
+  .scene_element--fadeinright {
+    animation-name: fadeInRight;
+  }
+
+  /** Reverse "exit" animations */
+  &.is-exiting {
+      .scene_element {
+        animation-direction: alternate-reverse;
+      }
+  }
+}
 /***LEVONA ADDED END**/
+
 
 
 
@@ -447,8 +490,7 @@ hr{
 	background: #ffffff;
 	padding: 14px 24px 13px;
 	display: inline-block;
-	color:#000000;
-	
+	color:#000000;	
 }
 .footer nav ul {
 	list-style: none;
