--- a/css/mensProductList.css
+++ b/css/mensProductList.css
@@ -205,6 +205,8 @@ article {
 	-webkit-clip-path: polygon(0 0, 100% 0%, 70% 100%, 0% 100%);
 	clip-path: polygon(0 0, 100% 0%, 70% 100%, 0% 100%);
 	position:relative;
+    transition:all 2s;
+
 }
 
 .onTop{
@@ -268,10 +270,32 @@ article {
 	height: 100%;
 	background: black;
 	display: inline-block;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
+#swatchesContainer #blue{
+	background:#195396;
+	border:3px solid black;
+}
+
+#swatchesContainer #grey{
+	background:#777;
+	transition:all 1s;
+}
+
+#swatchesContainer #grey:hover{
+	transition:all 1s;
+	background:#444;
+}
+#swatchesContainer #blue:hover
+{
+	transition:all 1s;
+}
+
+#swatchesContainer div:hover{
+	cursor:pointer;
+}
 #detailProductNav{
 	  width: 4%;
   height: auto;
@@ -303,13 +327,116 @@ article {
      -webkit-animation-fill-mode: forwards;
 }
 
+
 .closeBtn.comments{
 	color:black;
 	z-index:1;
 }
 
+/*ProductView*/
+#leftComments.productView{
+	-webkit-clip-path: polygon(0 0, 100% 0%, 70% 100%, 0% 100%);
+	clip-path: polygon(0 0, 100% 0%, 70% 100%, 0% 100%);
+	-webkit-animation: productBox 2s; /* Chrome, Safari, Opera */
+    animation: productBox 2s;
+    animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards;
+    transition:all 2s;
+}
+
+
+/*Review Section*/
+#reviewSection{
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	margin-left: 18%;
+}
+
+#productPreviewText{
+	margin-top:10%;
+}
+
+#productPreviewText h2{
+	margin:0 0 1% 0;
+}
+
+#productPreviewText h4{
+	margin:0 0 2% 0;
+}
+
+#rating{
+	margin-bottom:4%;
+}
+
+
+#rating i{
+	display:inline-block;
+}
+
+#userContainer div{
+	display:inline-block;
+	height:100%;
+	width:70%;
+	vertical-align:middle;
+	margin-top:2.5%;
+	margin-bottom:2.5%;
+	text-align:left;
+	margin-left:2%;
+}
+
+.userProfiles{
+	max-width: 15%;
+	max-height: 50%;
+	width: 100%;
+	height: 100%;
+}
+
+#userContainer p{
+	font-size:0.75rem;
+	text-align:justify;
+	margin:0;
+}
+
+#userContainer{
+  width: 100%;
+  height: auto;
+  margin-top: 8%;
+  margin-bottom: 8%;
+}
+
+input[type="submit"]{
+	width: 100%;
+  border: 1px solid black;
+  background: none;
+}
+
+input[type="submit"]:hover{
+	background:black;
+	color:white;
+	transition:all 1s;
+	cursor:pointer;
+}
+
+.userProfileText{
+	margin:1% 0 1% 0;
+	font-style:bold;
+}
 
 /*animation*/
+/* Chrome, Safari, Opera */
+@-webkit-keyframes productBox {
+    0% {left:50%;}
+    100% {left:0%;}
+ 
+}
+
+/* Standard syntax */
+@keyframes productBox {
+    from {background: red;}
+    to {background: yellow;}
+}
+
 /* Chrome, Safari, Opera */
 @-webkit-keyframes modalBox {
     0% {left:0%;}
@@ -319,7 +446,7 @@ article {
 
 /* Standard syntax */
 @keyframes modalBox {
-    from {background: red;}
-    to {background: yellow;}
+    from {left:0%;}
+    to {left:50%;}
 }
 
