--- a/css/about.css
+++ b/css/about.css
@@ -27,35 +27,33 @@
 }
 
 .aboutText{
-	padding:2em 10em;
+	padding:1em 10em;
 	text-align:center;
-}
-.aboutText{
 	width:65%;
 	height:100%;
 	margin-bottom:1em;
 	display:inline-block;
 	float:right;
-	
 }
+
 .aboutTitle{
   text-align:center;
 }
 p:first-of-type {
-  font-family: "Aleo", "Times New Roman", serif;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  text-transform: none;
-  color: #81997e;
-  font-size: 1.15em;
-  line-height: 1.3em;
-  padding-right:3em;
-
+	font-family: "Aleo", "Times New Roman", serif;
+	text-transform: uppercase;
+	letter-spacing: 0.05em;
+	text-transform: none;
+	color: #81997e;
+	font-size: 1.15em;
+	line-height: 1.3em;
+	text-align:center;
 }
 
-.map {
-	margin-left: -5em;
-	margin-top: -1.5em;
+#googleMap{
+	width:550px;
+	height:380px;
+	
 }
 
 .footer {
