--- a/css/mensProductList.css
+++ b/css/mensProductList.css
@@ -1,9 +1,3 @@
-h3{
-	color:black;
-}
-h4{
-	color:black;
-}
 
 #navContainer ul li a{
 	color:black;
@@ -61,6 +55,8 @@ h4{
 	float: right;
 	height:75%;
 	padding-right:3%;
+	z-index:1;
+	position:relative;
 }
 
 .glassListing{
@@ -71,33 +67,84 @@ h4{
 	padding-right:5%;
 	padding-left:5%;
 }
+.glassListing h3{
+	color:black;
+	font-size:1.15rem;
+	letter-spacing:5px;
+	margin:0;
+	text-transform:uppercase;
+	font-weight:bold;
+	font-family:"proximaNovaSemiBold";
+	margin-top:5%;
+}
 
 
+.glassListing h4{
+	color:black;
+	margin-top:5%;
+	font-size:0.9rem;
+	letter-spacing:10px;
+}
+
+
+
+/*nav section*/
 #Leonards:hover,
 #Milan:hover,
 #Wavers:hover{
-	border:30px solid black;
+	border:30px solid transparent;
 	transition:all 0.5s;
 
 }
 
-#Leonard img:hover,
-#Milan img:hover,
-#Wavers img:hover{
+#Leonards:hover{
+	-moz-border-image: -moz-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);
+	-webkit-border-image: -webkit-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);
+	border-image: linear-gradient(to bottom, #3acfd5 0%, #3a4ed5 100%);
+	border-image-slice: 1;
+}
+#Milan:hover{
+	-moz-border-image: -moz-linear-gradient(top, #422015 0%, #5E493D 100%);
+	-webkit-border-image: -webkit-linear-gradient(top, #422015 0%, #5E493D 100%);
+	border-image: linear-gradient(to bottom, #422015 0%, #5E493D 100%));
+	border-image-slice: 1;
+}
+
+#Wavers:hover{
+	-moz-border-image: -moz-linear-gradient(top, #004434 0%, #97D8A6 100%);
+	-webkit-border-image: -webkit-linear-gradient(top, #004434 0%, #97D8A6 100%);
+	border-image: linear-gradient(to bottom, #004434 0%, #97D8A6 100%));
+	border-image-slice: 1;
+}
+
+.styleContainer{
+	width:100%;
+	height:100%;
+}
+
+.styleContainer:hover{
 	opacity:0;
 	transition:all 0.5s;
+	cursor:pointer;
 }
 
+
 #Leonards{
-	background-image:url("../img/Leonard.jpg");
+	background-image:url("../img/classicLeonard.jpg");
+	background-position:center;
+	background-repeat:no-repeat;
 }
 
 #Milan{
-	background-image:url("../img/Milan.jpg");
+	background-image:url("../img/classicMilan.jpg");
+	background-position:center;
+	background-repeat:no-repeat;
 }
 
 #Wavers{
-	background-image:url("../img/Rectangles.jpg");
+	background-image:url("../img/classicWavers.jpg");
+	background-position:center;
+	background-repeat:no-repeat;
 }
 
 .styleContainers{
@@ -109,17 +156,48 @@ h4{
 }
 
 
+.styleInfoContainer{
+	color: black;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	text-align: center;
+	width: 100%;
+	height: 100px;
+	margin-top: -50px;
+}
+
+.styleInfoContainer h4{
+	font-size: 3rem;
+	color:white;
+	text-shadow:1px 1px 10px rgba(0,0,0,0.5);
+	margin:0;
+	letter-spacing:5px;
+}
+
+.styleInfoContainer p{
+	font-size:1rem;
+	color:white;
+	margin:0;
+	text-shadow:1px 1px 5px black;
+	letter-spacing:10px;
+}
+#styleLeonardContainer{
+	width:100%;
+	height:100%;
+}
+
 .seeMoreBtn{
 	position: absolute;
 	border: 5px solid black;
 	width: 80%;
 	height: 15%;
-	top: 50%;
+	top: 80%;
 	left: 50%;
 	margin-left: -40%;
 }
 
-
+/*nav section ends*/
 
 #fixedGlassNav{
 	width: 20%;
