--- a/css/about.css
+++ b/css/about.css
@@ -10,20 +10,21 @@
 	display:block;
 	width:35%;
 }
-.aboutImage img{
+
+.about1 img{
 	height:100%;
 	position:relative;
 	display:block;
 	width:100%;
-
-}
-.about1 img{
 	margin-top:0;
 	display:block;
 }
 .about2 img{
-
+	height:100%;
+	position:relative;
 	display:block;
+	width:100%;
+	visibility:visible;
 }
 
 .aboutText{
@@ -41,6 +42,21 @@
 .aboutTitle{
   text-align:center;
 }
+
+.about-text-wrapper ul{
+	list-style:none;
+	margin:0.5em 0;
+	font-size: 1.2em;
+	line-height:1.25em;
+	font-weight:600;
+	padding:0;
+}
+.about-text-wrapper li{
+	display:inline-block;
+	margin-left:0.5em;
+}
+
+
 p:first-of-type {
 	font-family: "Aleo", "Times New Roman", serif;
 	text-transform: uppercase;
@@ -54,11 +70,80 @@ p:first-of-type {
 }
 
 #googleMap{
-	width:550px;
+	position:relative;
+	display:block;
+	width:100%;
 	height:380px;
-	
 }
 
 .footer {
 	position:fixed;
+}
+
+
+/**TABLET CHANGES**/
+@media(max-width:80em){
+	
+	.user-content{
+		line-height: 1.1em;
+	}
+	
+	#aboutTextStuff {
+		padding: 0.5em;
+	}
+	
+	.aboutText {
+		font-size:0.85em;
+		padding: 1em;
+		text-align: center;
+		width: 65%;
+		height: 100%;
+		display: inline-block;
+		float: right;
+	}
+	
+	p:first-of-type {
+	  margin: 0.5em 0;
+	  font-size:1.2em;
+	}
+	.aboutTitle {
+	  text-align: center;
+	  margin: 0.5em 0 0.25em 0;
+	}
+}
+/**MOBILE CHANGES**/
+@media(max-width:40em) {
+
+	/**Image**/
+	img:nth-child(2){
+		position:absolute;
+		visibility:hidden;
+	}
+	
+	/**Text**/
+	.user-content{
+		line-height: 1.2em;
+	}
+	p:first-of-type {
+	  line-height:1.1em;
+	}
+	.aboutImage{
+		position:relative;
+		display:block;
+		width:100%;
+	}
+	#aboutTextStuff {
+		padding: 0 1em;
+	}
+	.aboutText{
+		width:100%;
+		padding: 0 1em;
+	}
+	
+	#googleMaps{
+		position:relative;
+		display:block;
+		height:380px;
+	}
+
 }
