--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,67 @@
-.section-press{
+.section-blog{
 	width:100%;
 	height:100%;
 	margin-top:10%;
+	margin-left: 20%;
 
+}
+
+.blogPost{
+	position:absolute;
+	display:block;
+	width:60%;
+}
+
+.individualPosts{
+	margin-top:2em;
+}
+
+/**image**/
+figure{
+	margin:0;
+}
+.blog1 img{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+.blog2 img{
+	height:100%;
+	position:relative;
+	display:block;
+	width:100%;
+	visibility:visible;
+}
+
+/**text**/
+.blog-text-wrapper{
+	text-align:center;
+}
+.user-content{
+	position:relative;
+	display:block;
+	width:100%;
+}
+figcaption{
+	font-size:0.75em;
+	font-style:italic;
+	margin-top:0.5em;
+}
+
+.footer {
+	position:fixed;
+}
+
+@media(max-width:30em){
+	.section-blog {
+		width: 100%;
+		height: 100%;
+		margin-top: 10%;
+		margin-left:0;
+	}
+	
+	.blogPost {
+		width: 100%;
+		padding:1em;
+	}
 }
