--- a/css/mensProductList.css
+++ b/css/mensProductList.css
@@ -67,7 +67,9 @@
 	padding-right:5%;
 	padding-left:5%;
 }
-.glassListing h3{
+.glassListing h3,
+.productText h2,
+#productPreviewText h2{
 	color:black;
 	font-size:1.15rem;
 	letter-spacing:5px;
@@ -77,10 +79,13 @@
 	font-family:"proximaNovaSemiBold";
 	margin-top:5%;
 }
-
-
 .glassListing h4{
 	color:black;
+}
+
+.glassListing h4,
+.productText h3,
+#productPreviewText h3{
 	margin-top:5%;
 	font-size:0.9rem;
 	letter-spacing:10px;
@@ -266,13 +271,17 @@ article {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
+	transition:all 2s ease-in-out;
+	-webkit-transition:all 2s ease-in-out;
+	background:white;
 }
 
 #rightContent img{
 	position:relative;
 	float:right;
 	height:100%;
-	width:100%;
+	width:93%;
+
 	
 }
 
@@ -285,6 +294,18 @@ article {
 	position:relative;
     transition:all 2s;
 
+}
+
+.eyeGlassContainer{
+	height:100%;
+	width:100%;
+}
+
+#blueGlasses,
+#clearGlasses{
+	width:100%;
+	height:53%;
+	margin-left:2%;
 }
 
 .onTop{
@@ -311,21 +332,36 @@ article {
 	margin-left: -40%;
 }
 
-#addBtn{
-	background: black;
-	width: 50%;
-	position: relative;
-	left: 50%;
-	margin-left: -25%;
-	text-align: center;
-
+.productText p{
+	font-size: 0.75rem;
+	line-height: 20px;
 }
-
 #addBtn h3{
 	margin: 0;
 	padding: 5%;
-	color:white;
+	font-size: 1rem;
+	letter-spacing: 3px;
 
+}
+
+#addBtn{
+  width: 50%;
+  border: 2px solid black;
+  position: relative;
+  left: 50%;
+  margin-left: -25%;
+  text-align: center;
+  transition:all 1s ease-in-out;
+	-webkit-transition:all 1s ease-in-out;
+
+}
+
+#addBtn:hover{
+	background:black;
+	color:white;
+	cursor:pointer;
+	transition:all 1s ease-in-out;
+	-webkit-transition:all 1s ease-in-out;
 }
 
 .closeBtn{
@@ -334,6 +370,7 @@ article {
 	right: 2%;
 	color: white;
 	font-size: 1.5rem;
+	cursor:pointer;
 }
 
 #swatchesContainer{
@@ -395,6 +432,53 @@ article {
 
 }
 
+
+#glassStoryShots{
+	position: absolute;
+	bottom: 5%;
+	right: 14%;
+	max-width:30%;
+	width: 100%;
+	max-height:10%;
+	height: 100%;
+	background:white;
+	-webkit-box-shadow:0 2px 5px rgba(0,0,0,0.5);
+	box-shadow:0 2px 5px rgba(0,0,0,0.5);
+}
+
+#glassStoryShots div{
+	width:33.3333%;
+	height:100%;
+	display:inline-block;
+	float:left;
+}
+
+#glassStoryShots img{
+	width:100%;
+	height:100%;
+	opacity:0.5;
+	transition:all 0.5s ease-in-out;
+	-webkit-transition:all 0.5s ease-in-out;
+
+}
+#glassStoryShots:first-child{
+	opacity:1;
+}
+
+#glassStoryShots img:hover{
+	opacity:1 !important;
+	cursor:pointer;
+	transition:all 0.5s ease-in-out;
+	-webkit-transition:all 0.5s ease-in-out;
+}
+
+#leonardsStory,
+#leonardsTwoStory,
+#leonardsThreeStory{
+	transition:all 2s ease-in-out;
+	-webkit-transition:all 2s ease-in-out;
+}
+
 /*CommentSection*/
 #leftContent.comments{
 	-webkit-clip-path:polygon(0 0, 100% 0%, 100% 100%, 15% 100%);
@@ -433,14 +517,6 @@ article {
 
 #productPreviewText{
 	margin-top:10%;
-}
-
-#productPreviewText h2{
-	margin:0 0 1% 0;
-}
-
-#productPreviewText h4{
-	margin:0 0 2% 0;
 }
 
 #rating{
@@ -502,6 +578,8 @@ input[type="submit"]:hover{
 }
 
 /*animation*/
+
+/*modal Box animation*/
 /* Chrome, Safari, Opera */
 @-webkit-keyframes productBox {
     0% {left:50%;}
@@ -527,4 +605,8 @@ input[type="submit"]:hover{
     from {left:0%;}
     to {left:50%;}
 }
+
+/*modal Box animation ends*/
+
+
 
