--- a/css/mobileStyle.css
+++ b/css/mobileStyle.css
@@ -1,10 +1,35 @@
 
 @media(max-width:40em) {
 
+
+/*Product Navigation- Mens,Womens,Umbrellas*/
+	.mobileProductNav{
+		  list-style: none;
+  text-align: center;
+  padding: 0;
+  transition:all 0.5s ease-in-out;
+	-webkit-transition:all 0.25s ease-in-out;
+}
+
+	
+	.mobileProductNav li{
+		cursor: pointer;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  font-size: 1.15rem;
+  font-family:"proximaNovaSemiBold";
+  transition:all 0.5s ease-in-out;
+	-webkit-transition:all 0.25s ease-in-out;
+	}
+
+	.mobileProductNav li a{
+		color:black;
+
+	}
 	#customerInfoNav{
 		z-index:5;
 	}
-
+/*footer*/
 	.footer{
 		padding-right:1.5em;
 		bottom:0;
@@ -37,6 +62,7 @@
 		background-color: white;
 		z-index: 10;
 	}
+/*END*/
 
 	.submitButton{
 		background: black;
