--- a/css/leonardMobileStyle.css
+++ b/css/leonardMobileStyle.css
@@ -92,32 +92,32 @@
 		margin-left:0;
 	}
 	#leftContent.comments{
-		-webkit-clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
-		clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
-		width:100%;
-		height:100%;
+		-webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0% 100%);
+		clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+		width: 100%;
+		height: 100%;
 		position:absolute;
-		top:0;
-		-webkit-animation: modalBoxMobile 0.25s; /* Chrome, Safari, Opera */
-	    animation: modalBoxMobile 0.25s;
-	    animation-fill-mode: forwards;
-	    -webkit-animation-fill-mode: forwards;
-	    transition:all 2s;
+		bottom:0;
+		margin:0;
+		-webkit-animation: modalBox 0.55s; /* Chrome, Safari, Opera */
+    	animation: modalBox 0.55s;
+     	animation-fill-mode: forwards;
+     	-webkit-animation-fill-mode: forwards;
+     	transition:all 0.55s ease-in-out;
 
 	}
 
-
-@-webkit-keyframes modalBoxMobile {
-    0% {top:50%;}
-    100% {top:0%;}
-
+/* Chrome, Safari, Opera */
+@-webkit-keyframes modalBox {
+    0% {left:0%;opacity:0;}
+    100% {left:0%;opacity:1;}
  
 }
 
 /* Standard syntax */
 @keyframes modalBox {
     from {left:0%;}
-    to {left:50%;}
+    to {left:0%;}
 }
 
 }
