--- a/css/mobileStyle.css
+++ b/css/mobileStyle.css
@@ -6,6 +6,10 @@
 }
 
 /*Product Navigation- Mens,Womens,Umbrellas*/
+.pageContainer{
+	width:100%;
+	height:50%;
+}
 	.mobileProductNav{
 	list-style: none;
 	text-align: center;
