--- a/css/blog.css
+++ b/css/blog.css
@@ -10,7 +10,7 @@
 .content {
     position:relative;
     z-index:2;
-    background-color:rbga(255,255,255,0.4);  
+    background-color:rgba(255,255,255,0.4);  
     height:50%;
     margin-top:22%;
 }
@@ -119,11 +119,11 @@ figcaption{
 		width: 100%;
 		height: auto;
 		margin-top: 10%;
-		margin-left:0;
+		padding:0 0.25em;
 	}
 	
 	.content {
-		margin-top:110%;
+		margin-top:40%;
 	}
 	
 	.blogPost {
