--- a/css/leonardMobileStyle.css
+++ b/css/leonardMobileStyle.css
@@ -22,8 +22,14 @@
 	font-size: 2rem;
 	margin-right: 20%;
 	margin-left: 4%;
-
 	}
+
+	.reviewBack{
+	left: 4%;
+	top: 3%;
+	position: absolute;
+	}
+
 
 	#glassStoryShots{
 		display:none;
@@ -36,10 +42,10 @@
 	}
 
 	#leftContent{
-		-webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-		clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+		-webkit-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
+		clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
 		width:100%;
-		height:80%;
+		height:85%;
 		position:absolute;
 		bottom:0;
 	}
@@ -63,16 +69,20 @@
 	.onTop{
 
 	width: 100%;
-	padding-top: 25%
+	padding-top: 20%
 
 	}
 	#blueGlasses,#clearGlasses{
 	width: 65%;
-	height: 45%;
+	height: 42%;
 	margin: 0 auto;
 
 	}
-
+	#comments h4{
+	text-align: center;
+	font-size: 1.2rem;
+	text-decoration: underline;
+	}
 	#swatchesContainer div{
 		width:9%;
 	}
@@ -90,10 +100,11 @@
 	}	
 	#reviewSection{
 		margin-left:0;
+		margin-top:15%;
 	}
 	#leftContent.comments{
-		-webkit-clip-path: polygon(0 0, 100% 15%, 100% 100%, 0% 100%);
-		clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		width: 100%;
 		height: 100%;
 		position:absolute;
@@ -105,6 +116,14 @@
      	-webkit-animation-fill-mode: forwards;
      	transition:all 0.55s ease-in-out;
 
+	}
+
+	.modalMobile{
+		display:block;
+	}
+
+	.modalDesktop{
+		display:none;
 	}
 
 /* Chrome, Safari, Opera */
