removed margins from signing up

--- a/css/style.css
+++ b/css/style.css
@@ -378,16 +378,13 @@ input:active,input:focus{
 	outline:none;
 }
 
-#FirstSubmit{
-	margin-bottom: 1em;
-}
 
-.submitButton{
-	text-align: center;
-	padding: 1em 2em;
-	border: 1px solid black;
-	font-size: 1rem;
-	margin-top: 2em;
+.submitButton {
+  text-align: center;
+  padding: 1em;
+  border: 1px solid black;
+  font-size: 1rem;
+  margin-top: 0.5px;
 }
 
 .submitButton:hover{
