--- a/css/about.css
+++ b/css/about.css
@@ -81,6 +81,7 @@ p:first-of-type {
 }
 
 
+
 /**TABLET CHANGES**/
 @media(max-width:80em){
 	
@@ -133,12 +134,8 @@ p:first-of-type {
 		width:100%;
 	}
 	#aboutTextStuff {
-<<<<<<< HEAD
-		padding: 0 1em;
-		margin-bottom:50%;
-=======
 		padding: 3em 1em 3em 0;
->>>>>>> origin/master
+
 	}
 	.aboutText{
 		width:100%;
@@ -146,6 +143,7 @@ p:first-of-type {
 	}
 	
 	#wheretofindus{
+
 		padding-top:5em;
 		margin-top: 10em;
 	}
@@ -155,5 +153,16 @@ p:first-of-type {
 		display:block;
 		height:380px;
 	}
+	#footer-menu>li {
+	  display: inline-block;
+	  padding: 0;
+	}
+	#footer-menu {
+	  width: 100%;
+	  text-align:left;
+	  font-size: 1.15rem;
+	  padding: 0;
+	}
+
 
 }
