--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,11 @@ a{
 	transition:all 0.5s;
 }
 
+
+#navContainer .break{
+	padding-bottom:15%;
+
+}
 /*animated nav ends*/
 
 .background{
@@ -205,7 +210,7 @@ a{
 	-webkit-transition:all 0.5s ease-in-out;
 }
 
-#ctaText{
+.ctaText{
 	display: inline-block;
 	vertical-align: top;
 	width: 48%;
@@ -213,11 +218,11 @@ a{
 	margin-left: 4%;
 }
 
-#ctaImg{
+.ctaImg{
 	display: inline-block;
 
 }
-#ctaImg img{
+.ctaImg img{
 	width:100%;
 	height:100%;
 }
