--- a/css/leonardMobileStyle.css
+++ b/css/leonardMobileStyle.css
@@ -49,6 +49,8 @@
 	#leftContent{
 		-webkit-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
 		clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
+		-moz-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
+		-o-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
 		width:100%;
 		height:85%;
 		position:absolute;
@@ -110,6 +112,8 @@
 	#leftContent.comments{
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		-moz-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		-o-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		width: 100%;
 		height: 100%;
 		position:absolute;
@@ -242,6 +246,8 @@
 	#leftContent{
 		-webkit-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
 		clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
+		-moz-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
+		-o-clip-path: polygon(0 0, 100% 25%, 100% 100%, 0% 100%);
 		width:100%;
 		height:85%;
 		position:absolute;
@@ -303,6 +309,8 @@
 	#leftContent.comments{
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		-moz-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		-o-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 		width: 100%;
 		height: 100%;
 		position:absolute;
