--- a/css/mobileStyle.css
+++ b/css/mobileStyle.css
@@ -61,6 +61,8 @@
 	padding: 0;
 	transition:all 0.5s ease-in-out;
 	-webkit-transition:all 0.25s ease-in-out;
+	-o-transition:all 0.25s ease-in-out;
+	-moz-transition:all 0.25s ease-in-out;
 }
 	#productNav{
 		display:none;
@@ -74,6 +76,8 @@
 	font-family:"proximaNovaSemiBold";
 	transition:all 0.5s ease-in-out;
 	-webkit-transition:all 0.25s ease-in-out;
+	-o-transition:all 0.25s ease-in-out;
+	-moz-transition:all 0.25s ease-in-out;
 	}
 
 	.mobileProductNav li a{
@@ -217,7 +221,10 @@
 	margin-top: 3%;
 	margin-bottom: 3%;
 	/* left: 50%; */
-	transition: all 0.5s
+	transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
 	}
 
 	#signInLink,
@@ -264,6 +271,9 @@
 
 	#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
 	  transition: all 1s ease-in-out;
+	  -webkit-transition: all 1s ease-in-out;
+	  -moz-transition: all 1s ease-in-out;
+	  -o-transition: all 1s ease-in-out;
 	}
 	#nav-toggle.active span {
 	  background-color: transparent;
@@ -273,9 +283,15 @@
 	}
 	#nav-toggle.active span:before {
 	  transform: rotate(45deg);
+	  -webkit-transform: rotate(45deg);
+	  -moz-transform: rotate(45deg);
+	  -o-transform: rotate(45deg);
 	}
 	#nav-toggle.active span:after {
 	  transform: rotate(-45deg);
+	  -webkit-transform: rotate(-45deg);
+	  -moz-transform: rotate(-45deg);
+	  -o-transform: rotate(-45deg);
 	}
 
 	.callToAction{
@@ -308,6 +324,8 @@
 	padding: 0;
 	transition:all 0.5s ease-in-out;
 	-webkit-transition:all 0.25s ease-in-out;
+	-moz-transition:all 0.25s ease-in-out;
+	-o-transition:all 0.25s ease-in-out;
 }
 	#productNav{
 		display:none;
@@ -321,6 +339,10 @@
 	font-family:"proximaNovaSemiBold";
 	transition:all 0.5s ease-in-out;
 	-webkit-transition:all 0.25s ease-in-out;
+	-moz-transition:all 0.25s ease-in-out;
+	-o-transition:all 0.25s ease-in-out;
+	
+
 	}
 
 	.mobileProductNav li a{
@@ -465,6 +487,9 @@
 	margin-bottom: 3%;
 	/* left: 50%; */
 	transition: all 0.5s
+	-webkit-transition: all 0.5s
+	-moz-transition: all 0.5s
+	-o-transition: all 0.5s
 	}
 
 	#signInLink,
@@ -511,6 +536,9 @@
 
 	#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
 	  transition: all 1s ease-in-out;
+	  -webkit-transition: all 1s ease-in-out;
+	  -moz-transition: all 1s ease-in-out;
+	  -o-transition: all 1s ease-in-out;
 	}
 	#nav-toggle.active span {
 	  background-color: transparent;
@@ -520,9 +548,15 @@
 	}
 	#nav-toggle.active span:before {
 	  transform: rotate(45deg);
+	  -webkit-transform: rotate(45deg);
+	  -moz-transform: rotate(45deg);
+	  -o-transform: rotate(45deg);
 	}
 	#nav-toggle.active span:after {
 	  transform: rotate(-45deg);
+	  -webkit-transform: rotate(-45deg);
+	  -moz-transform: rotate(-45deg);
+	  -o-transform: rotate(-45deg);
 	}
 
 	.callToAction{
